# user-profile-analyzer

./: .env.example  .gitignore  AI画像分析使用说明.md  deploy-uv.sh  main.py  package-lock.json  pyproject.toml  requirements.txt  restart_dashboard.sh  start_dashboard.sh  使用说明.txt
.claude/: settings.local.json
deploy/: deploy-uv.sh  deploy.sh  nginx.conf  user-profile-analyzer.service
react-dashboard/backend/: exclusion.json  exclusion_manager.py  main.py
react-dashboard/frontend/: index.html  package-lock.json  package.json
react-dashboard/frontend/src/: App.jsx  App.jsx.bak  index.css  main.jsx
react-dashboard/frontend/src/services/: api.js
scripts/: run_analyze_profile_bg.sh
src/user_profile_analyzer/: __init__.py  add_payment_amount.py  add_payment_stats.py  analyze_profile.py  generate_profile.py  update_payment_stats.py  web_ui.py
